# magni_nav_ros1

./: CMakeLists.txt  README.md  package.xml
launch/: cartographer_magni.launch  cartographer_magni_offline.launch  free_fleet_client.launch  magni.launch  magni_free_fleet_client.launch  map_writer.launch
misc/: install_cmake.bash  restore_last_pose.bash  save_last_pose.bash  start_device.bash
param/: amcl.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  magni.rviz  move_base_params.yaml
scripts/: tweak_global_costmap_inflation.sh
