<?xml version="1.0"?>
<package format="2">
  <name>magni_nav_ros1</name>
  <version>0.0.0</version>
  <description>Launch files for magni_45 package</description>

  <maintainer email="cnboonhan@openrobotics.org">Charayaphan Nakorn Boon Han</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ros-kinetic-ros-base</depend>
  <depend>ros-kinetic-move-base</depend>
  <depend>ros-kinetic-dwa-local-planner</depend>
  <depend>ros-kinetic-amcl</depend>
  <depend>ros-kinetic-map-server</depend>
  <depend>ros-kinetic-tf2-web-republisher</depend>
  <depend>ros-kinetic-diagnostic-aggregator</depend>

  <export>
  </export>
</package>
